# nixos-related-things

./: README.md  default.nix  doc-repos-standalone  flake.nix
doc-repos/: default.nix  doc-repos
misc/: nixos-menu-search.pl  nixos-menu-search.sh
nixos-menu-search/: README.md  flake.nix  pyproject.toml
nixos-menu-search-python/: .gitignore  flake.nix
nixos-menu-search-python/src/nixos_menu_search/: main.py
nixos-menu-search-rust/: .gitignore  Cargo.toml  default.nix  flake.nix
nixos-menu-search-rust/src/: main.rs
nixos-menu-search/src/nixos_menu_search/: main.py
