[tool.poetry]
name = "nixos_menu_search"
version = "0.1.0"
description = ""
authors = ["Artturin <Artturin@artturin.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
icecream = "^2.1.1"
PyGithub = "^1.55"

[tool.poetry.scripts]
nixos-menu-search = 'nixos_menu_search.main:main'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py310']

[[tool.mypy.overrides]]
module = [
    "icecream",
]
ignore_missing_imports = true

[tool.mypy]
strict = true

[tool.pylint.master]
init-hook = "import sys; sys.path.append('src')"

[tool.pylint.FORMAT]
output-format = "colorized"
max-line-length = 130
